Fix CodeSandbox link line breaking on small phone displays

--- a/docs/scss/_feature.scss
+++ b/docs/scss/_feature.scss
@@ -3,7 +3,11 @@
   margin-bottom: 2rem;
   display: flex;
   justify-content: space-between;
+  font-size: 1.4rem;
 
+  @media (min-width: $media-xs) {
+    font-size: 1.6rem;
+  }
   @media (min-width: $media-sm) {
     font-size: 1.7rem;
   }
